Use available jpackage plugin and embed JVM args